--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -1,3 +1,4 @@
+# translation of fr.po to French
 #
 #    Translators, if you are not familiar with the PO format, gettext
 #    documentation is worth reading, especially sections dedicated to
@@ -15,13 +16,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uw-imap\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-03 17:51+0100\n"
-"PO-Revision-Date: 2004-03-27 12:19+0100\n"
+"POT-Creation-Date: 2005-03-31 16:55+0200\n"
+"PO-Revision-Date: 2005-04-02 08:20+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.9.1\n"
 
 #. Type: multiselect
 #. Description
@@ -52,6 +54,33 @@ msgstr "POP3S - port TCP 995 avec gestion SSL."
 #: ../ipopd.templates.master:5
 msgid "If in doubt, choose pop3 and pop3s."
 msgstr "Dans le doute, vous devriez choisir POP3 et POP3S."
+
+#. Type: boolean
+#. Description
+#: ../ipopd.templates.master:17 ../uw-imapd.templates.master:18
+msgid "Enforce port selection?"
+msgstr "Faut-il appliquer le choix des ports ?"
+
+#. Type: boolean
+#. Description
+#: ../ipopd.templates.master:17 ../uw-imapd.templates.master:18
+msgid ""
+"The ports selected for enabling may be overridden by locally configured "
+"services. By default the port selection is respected only on initial "
+"installs, and is ignored on later reconfiguration."
+msgstr ""
+"Les ports choisis pour être activés peuvent être remplacés par des services "
+"locaux. Le choix des ports n'est respecté, par défaut, que lors de "
+"l'installation initiale et est ignoré lors des reconfigurations ultérieures."
+
+#. Type: boolean
+#. Description
+#: ../ipopd.templates.master:17 ../uw-imapd.templates.master:18
+msgid ""
+"Do you want to ignore possible local tweaks and always use selected ports?"
+msgstr ""
+"Veuillez confirmer si vous préférez ignorer les modifications locales et "
+"toujours utiliser les ports choisis."
 
 #. Type: boolean
 #. Description
