--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -1,64 +1,62 @@
-#
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans
-#
-#    Developers do not need to manually edit POT or PO files.
-#
-#, fuzzy
+# Translators, if you are not familiar with the PO format, gettext
+# documentation is worth reading, especially sections dedicated to
+# this format, e.g. by running:
+# info -n '(gettext)PO Files'
+# info -n '(gettext)Header Entry'
+# Some information specific to po-debconf are available at
+# /usr/share/doc/po-debconf/README-trans
+# or http://www.debian.org/intl/l10n/po-debconf/README-trans
+# Developers do not need to manually edit POT or PO files.
+# , fuzzy
+# 
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: uw-imap 7:2002edebian1-11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-03-31 16:55+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2005-10-12 15:13+0200\n"
+"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
+"Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: multiselect
 #. Description
 #: ../ipopd.templates.master:5 ../uw-imapd.templates.master:5
 msgid "Which ports should the server listen on?"
-msgstr ""
+msgstr "Vilka portar ska servern lyssna på?"
 
 #. Type: multiselect
 #. Description
 #: ../ipopd.templates.master:5
 msgid "pop2 =  POP 2 on TCP port 109 with TLS support.  This is obsolete."
-msgstr ""
+msgstr "pop2 =  POP 2 på TCP port 109 med TLS-stöd.  Denna är föråldrad."
 
 #. Type: multiselect
 #. Description
 #: ../ipopd.templates.master:5
 msgid "pop3  = POP 3 on TCP port 110 with TLS support."
-msgstr ""
+msgstr "pop3  = POP 3 på TCP port 110 med TLS-stöd."
 
 #. Type: multiselect
 #. Description
 #: ../ipopd.templates.master:5
 msgid "pop3s = POP 3 on TCP port 995 with SSL support."
-msgstr ""
+msgstr "pop3s = POP 3 på TCP port 995 med SSL-stöd."
 
 #. Type: multiselect
 #. Description
 #: ../ipopd.templates.master:5
 msgid "If in doubt, choose pop3 and pop3s."
-msgstr ""
+msgstr "Om du är osäker, välj pop3 och pop3s."
 
 #. Type: boolean
 #. Description
 #: ../ipopd.templates.master:17 ../uw-imapd.templates.master:18
 msgid "Enforce port selection?"
-msgstr ""
+msgstr "Framtvinga portval?"
 
 #. Type: boolean
 #. Description
@@ -68,6 +66,9 @@ msgid ""
 "services. By default the port selection is respected only on initial "
 "installs, and is ignored on later reconfiguration."
 msgstr ""
+"Portarna som valts för aktivering kan köras över av lokalt konfigurerade "
+"tjänster. Som standard respekteras portvalen bara vid initiella installation "
+"och ignoreras senare vid omkonfigurationer."
 
 #. Type: boolean
 #. Description
@@ -75,12 +76,14 @@ msgstr ""
 msgid ""
 "Do you want to ignore possible local tweaks and always use selected ports?"
 msgstr ""
+"Vill du ignorera tänkbara lokala ändringar och alltid använda de valda "
+"portarna?"
 
 #. Type: boolean
 #. Description
 #: ../libc-client__VER__.templates.in.master:4
 msgid "Continue installing libc-client without Maildir support?"
-msgstr ""
+msgstr "Fortsätta installera libc-klienten utan Maildir-stöd?"
 
 #. Type: boolean
 #. Description
@@ -92,13 +95,19 @@ msgid ""
 "changed your system configuration or other installed programs depend on libc-"
 "client then upgrading may result in broken mail handling."
 msgstr ""
+"Libc-klienten före version 2002d (och utvecklingsversioner av 2003) "
+"inkluderar en icke officiell och inte längre omskött patch för att stöda "
+"Maildirs. Dom standard användes inte Maildir av uw-imapd eller ipopd men om "
+"du har ändrat din systemkonfiguration eller andra installerade program har "
+"beroende av libc-klienten så kan uppgraderingen resultera i att e-"
+"posthanteringen bryts."
 
 #. Type: boolean
 #. Description
 #: ../libc-client__VER__.templates.in.master:4
 msgid ""
 "Do you want to continue installing a libc-client without Maildir support?"
-msgstr ""
+msgstr "Vill du fortsätta installera en libc-klient utan Maildir-stöd?"
 
 #. Type: multiselect
 #. Description
@@ -107,21 +116,22 @@ msgid ""
 "imap2 = IMAP 4Rev1 (not 2, strangely enough) on TCP port 143 with TLS "
 "support."
 msgstr ""
+"imap2 = IMAP 4Rev1 (inte 2, konstigt nog) på TCP port 143 med TLS stöd."
 
 #. Type: multiselect
 #. Description
 #: ../uw-imapd.templates.master:5
 msgid "imap3 = IMAP 3 on TCP port 220 with TLS support.  This is obsolete."
-msgstr ""
+msgstr "imap3 = IMAP 3 på TCP port 220 med TLS-stöd.  Denna är föråldrad."
 
 #. Type: multiselect
 #. Description
 #: ../uw-imapd.templates.master:5
 msgid "imaps = IMAP 4Rev1 on TCP port 993 with SSL support."
-msgstr ""
+msgstr "imaps = IMAP 4Rev1 på TCP port 993 med SSL-stöd."
 
 #. Type: multiselect
 #. Description
 #: ../uw-imapd.templates.master:5
 msgid "If in doubt, pick imap2 and imaps."
-msgstr ""
+msgstr "Om du är osäker, välj imap2 och imaps."
